need to fix legend text spacing

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -301,7 +301,7 @@ ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
 li {
-  margin-bottom: 1rem; }
+  margin-bottom: none; }
 
 #navbar {
   list-style-type: none;
@@ -315,6 +315,8 @@ li {
 }
 .legend-item {
   display: inline-block;
+  width: 50px; 
+  height: 50px;
 }
 
 
@@ -347,7 +349,7 @@ td:first-child {
   padding-left: 0; }
 th:last-child,
 td:last-child {
-  padding-right: 0; }
+  padding-right: 12px; }
 
 
 /* Spacing
